# cudaMallocRuntime

./: CMakeLists.txt  README.md  main.cu
